--- a/scroll.html
+++ b/scroll.html
@@ -29,6 +29,6 @@
 
     <canvas id="theCanvas" width="300" height="300"></canvas>
 
-    <script src="./scroll.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
